Interact with Hbase Using DnsAwareTestContainer